--- a/locale/en.yml
+++ b/locale/en.yml
@@ -248,25 +248,12 @@ en:
         expectations:
           allow_nil: "{{subject_name}} to require {{attribute}} to be set"
 
-      validate_uniqueness_of:
+      validate_is_unique:
         description: "require unique values for {{attributes}}"
         expectations:
           responds_to_scope: "{{subject_name}} instance responds to {{method}}"
           is_unique: "{{subject_name}} to require unique values for {{attribute}}"
-          case_sensitive: "{{subject_name}} to {{not}}be case sensitive on {{attribute}} validation"
-          valid_with_new_scope: "{{subject_name}} to be valid when {{attribute}} scope ({{method}}) change"
-        optionals:
-          scope:
-            positive: "scoped to {{sentence}}"
-          case_sensitive:
-            positive: "case sensitive"
-            negative: "case insensitive"
-
-      validates_is_unique:
-        description: "require unique values for {{attributes}}"
-        expectations:
-          responds_to_scope: "{{subject_name}} instance responds to {{method}}"
-          is_unique: "{{subject_name}} to require unique values for {{attribute}}"
+          nullable: "{{subject_name}} to require {{attribute}} to be set"
           case_sensitive: "{{subject_name}} to {{not}}be case sensitive on {{attribute}} validation"
           valid_with_new_scope: "{{subject_name}} to be valid when {{attribute}} scope ({{method}}) change"
         optionals:
