Added i18n translation for validate_is_unque.optionals.nullable.positive. Also removed those for case_sensitive since that option doesn't exist for DM validates_is_unique.

--- a/locale/en.yml
+++ b/locale/en.yml
@@ -259,7 +259,5 @@ en:
         optionals:
           scope:
             positive: "scoped to {{sentence}}"
-          case_sensitive:
-            positive: "case sensitive"
-            negative: "case insensitive"
-
+          nullable:
+            positive: "allowing nil values"
